# users-app

./: .gitignore  Dockerfile  README.md  config.yaml  makefile
docs/: README.md  deployment.md
k8s/: users-app-deployment.yaml  users-db-deployment.yaml  users-network-policy.yaml
users_app/: Dockerfile  README.md  pyproject.toml
users_app/app/: __init__.py  database.py  main.py  models.py  schemas.py
users_app/app/routers/: __init__.py  users.py
users_app/app/utils/: __init__.py  security.py
users_app/src/: assembly.py  config.py  errors.py
users_app/src/adapters/memory/: user_repository_adapter.py
users_app/src/adapters/postgres/: user_repository_adapter.py
users_app/src/config/: database.py  settings.py
users_app/src/domain/models/: token_request.py  token_response.py  user.py  user_patch.py
users_app/src/domain/ports/: pet_repository_port.py  user_repository_port.py
users_app/src/domain/use_cases/: authenticate_user_use_case.py  count_users_use_case.py  create_pet_use_case.py  create_user_use_case.py  delete_pet_use_case.py  delete_user_use_case.py  get_current_user_use_case.py  get_pets_use_case.py  get_user_use_case.py  get_users_use_case.py  reset_users_use_case.py  update_pet_use_case.py  update_user_use_case.py
users_app/src/entrypoints/api/: main.py
users_app/src/entrypoints/api/routers/: user_router.py
users_app/tests/: __init__.py  conftest.py  test_users_api.py
users_app/tests/api/: users.postman_collection.json
users_app/tests/unit/: conftest.py
users_app/tests/unit/domain/models/: test_pet.py  test_user.py
(+29 files in other folders)
